crates/djls-extraction/src/snapshots/djls_extraction__tests__golden_non_bits_variable.snap
---
source: crates/djls-extraction/src/lib.rs
expression: "snapshot(extract_rules(source, \"app.templatetags.custom\"))"
---
tag_rules:
  "app.templatetags.custom::custom_tag":
    arg_constraints:
      - Exact: 3
    required_keywords: []
    known_options: ~
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
      - name: arg2
        required: true
        kind: Variable
        position: 1
    supports_as_var: false
filter_arities: {}
block_specs: {}
