crates/djls-extraction/src/snapshots/djls_extraction__tests__golden_opaque_block.snap
---
source: crates/djls-extraction/src/lib.rs
expression: "snapshot(extract_rules(source, \"django.template.defaulttags\"))"
---
tag_rules:
  "django.template.defaulttags::verbatim":
    arg_constraints:
      - Exact: 1
    required_keywords: []
    known_options: ~
filter_arities: {}
block_specs:
  "django.template.defaulttags::verbatim":
    end_tag: endverbatim
    intermediates: []
    opaque: true
