crates/djls-extraction/src/snapshots/djls_extraction__tests__golden_option_loop.snap
---
source: crates/djls-extraction/src/lib.rs
expression: "snapshot(extract_rules(source, \"django.template.defaulttags\"))"
---
tag_rules:
  "django.template.defaulttags::include":
    arg_constraints:
      - Min: 2
    required_keywords: []
    known_options:
      values:
        - with
        - only
      allow_duplicates: false
      rejects_unknown: true
filter_arities: {}
block_specs: {}
