crates/djls-extraction/src/snapshots/djls_extraction__tests__golden_simple_block.snap
---
source: crates/djls-extraction/src/lib.rs
expression: "snapshot(extract_rules(source, \"django.template.loader_tags\"))"
---
tag_rules: {}
filter_arities: {}
block_specs:
  "django.template.loader_tags::block":
    end_tag: endblock
    intermediates: []
    opaque: false
