crates/djls-extraction/src/snapshots/djls_extraction__tests__golden_simple_tag_no_args.snap
---
source: crates/djls-extraction/src/lib.rs
expression: "snapshot(extract_rules(source, \"app.templatetags.custom\"))"
---
tag_rules:
  "app.templatetags.custom::current_time":
    arg_constraints:
      - Max: 1
    required_keywords: []
    known_options: ~
filter_arities: {}
block_specs: {}
