crates/djls-extraction/src/snapshots/djls_extraction__tests__golden_simple_tag_takes_context.snap
---
source: crates/djls-extraction/src/lib.rs
expression: "snapshot(extract_rules(source, \"app.templatetags.custom\"))"
---
tag_rules:
  "app.templatetags.custom::show_user":
    arg_constraints:
      - Max: 1
    required_keywords: []
    known_options: ~
    extracted_args:
      - name: as
        required: false
        kind:
          Literal: as
        position: 0
      - name: varname
        required: false
        kind: Variable
        position: 1
filter_arities: {}
block_specs: {}
