crates/djls-extraction/src/snapshots/djls_extraction__tests__golden_simple_tag_with_name_kwarg.snap
---
source: crates/djls-extraction/src/lib.rs
expression: "snapshot(extract_rules(source, \"app.templatetags.utils\"))"
---
tag_rules:
  "app.templatetags.utils::get_value":
    arg_constraints:
      - Min: 2
      - Max: 3
    required_keywords: []
    known_options: ~
    extracted_args:
      - name: key
        required: true
        kind: Variable
        position: 0
      - name: fallback
        required: false
        kind: Variable
        position: 1
      - name: as
        required: false
        kind:
          Literal: as
        position: 2
      - name: varname
        required: false
        kind: Variable
        position: 3
filter_arities: {}
block_specs: {}
