crates/djls-extraction/src/snapshots/djls_extraction__tests__golden_testtags.snap
---
source: crates/djls-extraction/src/lib.rs
expression: "snapshot(extract_rules(&source, \"tests.template_tests.templatetags.testtags\"))"
---
tag_rules: {}
filter_arities:
  "tests.template_tests.templatetags.testtags::upper":
    expects_arg: false
    arg_optional: false
block_specs: {}
